// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UXCaptureCreate renders correct markup when all props are defined 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UXCapture) {
				window.UXCapture.create({
					\\"onMark\\": function onMark(foo) {
		if (foo) {
			return foo;
		}
	},
					\\"onMeasure\\": function onMeasure(bar) {
		if (bar) {
			return bar;
		}
	},
				});
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureCreate renders the correct markup when no props are provided 1`] = `""`;

exports[`UXCaptureCreate renders the correct markup when only onMark is provided 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UXCapture) {
				window.UXCapture.create({
					\\"onMark\\": function onMark(foo) {
		if (foo) {
			return foo;
		}
	},
					
				});
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureCreate renders the correct markup when only onMeasure is provided 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UXCapture) {
				window.UXCapture.create({
					
					\\"onMeasure\\": function onMeasure(bar) {
		if (bar) {
			return bar;
		}
	},
				});
			}
		</script>
	",
    }
  }
/>
`;

exports[`UXCaptureCreate renders the correct markup when unsupported props are provided 1`] = `
<div
  dangerouslySetInnerHTML={
    Object {
      "__html": "
		<script>
			if(window.UXCapture) {
				window.UXCapture.create({
					\\"onMark\\": function onMark(foo) {
		if (foo) {
			return foo;
		}
	},
					\\"onMeasure\\": function onMeasure(bar) {
		if (bar) {
			return bar;
		}
	},
				});
			}
		</script>
	",
    }
  }
/>
`;
